<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#24313c">

    <TextView
        android:id="@+id/txtwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Welcome"
        android:paddingTop="50dp"
        android:textSize="25sp"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/txtuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtwelcome"
        android:layout_centerHorizontal="true"
        android:textColor="#fff" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LogoutBtn"
        android:textColor="#fff"
        android:background="#1ab188"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />



    <Button
        android:id="@+id/createTeamBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createTeamBtn"
        android:background="#435159"
        android:textColor="#fff"
        android:layout_weight="0.5"
        android:layout_above="@+id/logout"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="131dp"
        android:layout_alignParentEnd="true" />

</RelativeLayout>